core/logic/domain/src/commonMain/kotlin/com/basket/sample/scango/domain/error/ObserveActiveBasketError.kt
package com.basket.sample.scango.domain.error

import com.basket.core.common.result.failure.Error

sealed interface ObserveActiveBasketError : Error
